--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         <article>
             <h2>Private Cloud Storage</h2>
             <ul>
-                <li>Some other file</li>
+                <li>TODO: Get files from Raspberry Pi</li>
             </ul>
         </article>
     </section>
